Add more metrics
Related AB#1468

--- a/interfaces/HO-Portal/src/app/program/metrics/metrics.component.scss
+++ b/interfaces/HO-Portal/src/app/program/metrics/metrics.component.scss
@@ -19,9 +19,15 @@
 /*
   Metric Groups:
 */
+.metrics--group-program-properties {
+  background-color: gold;
+}
 .metrics--group-pa {
   background-color: rosybrown;
 }
-.metrics--group-funds {
+.metrics--group-financial {
   background-color: turquoise;
+}
+.metrics--group-aidworkers {
+  background-color: goldenrod;
 }
