--- a/interfaces/HO-Portal/src/app/program/metrics/metrics.component.scss
+++ b/interfaces/HO-Portal/src/app/program/metrics/metrics.component.scss
@@ -1,20 +1,61 @@
-.metrics--table {
-  width: 100%;
+.metrics {
+  --metrics-full-width: 330px;
+  --metrics-collapsed-width: 48px;
 
-  tr {
-    border-bottom: 1px solid var(--ion-color-medium);
-  }
+  width: var(--metrics-full-width);
 
-  th,
-  td {
-    padding: 0.4em 0.2em;
+  &.is-collapsed {
+    overflow: hidden;
+    width: var(--metrics-collapsed-width);
   }
 }
-.metrics--icon-cell {
+
+.metrics--table {
+  position: relative; // To contain .metrics--toggle
+  width: var(--metrics-full-width);
+
+  font-size: 90%;
+}
+
+.metrics--cell-icon,
+.metrics--cell-label,
+.metrics--cell-value {
+  padding: 0.4em 0.2em;
+  border-bottom: 1px solid white;
+}
+
+.metrics--cell-icon {
   display: flex;
   justify-content: center;
   align-content: center;
+  pointer-events: none;
 }
+
+.metrics--cell-value {
+  padding-inline-start: 0.4em;
+  border-inline-start: 1px solid white;
+}
+
+.metrics--header-toggle {
+  padding: 0; // Compensate for margin/padding of toggle-button
+}
+
+.metrics--toggle {
+  position: static; // To let hit-target expand outside itself.
+
+  // Hit-target:
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: var(--metrics-collapsed-width);
+    height: 100%;
+    content: '';
+    display: block;
+    cursor: pointer;
+  }
+}
+
 
 /*
   Metric Groups:
