--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -36,7 +36,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size-md="4" size-lg="3"
+      <ion-col size="auto"
                style="border-right: 1px dashed var(--ion-color-medium)"
       >
 
@@ -45,8 +45,7 @@
 
 
       </ion-col>
-      <ion-col size-md="8" size-lg="9">
-
+      <ion-col size="auto">
 
         <app-program-payout [selectedPhase]="selectedPhase"
                             [programId]="program?.id"
