--- a/interfaces/HO-Portal/src/app/program/metrics/metrics.component.html
+++ b/interfaces/HO-Portal/src/app/program/metrics/metrics.component.html
@@ -10,6 +10,7 @@
                     [title]="isCollapsed ? translate.instant('page.program.metrics.header.expand') : translate.instant('page.program.metrics.header.collapse')"
                     [aria-label]="isCollapsed ? translate.instant('page.program.metrics.header.expand') : translate.instant('page.program.metrics.header.collapse')"
                     (click)="toggleView()"
+                    id="metrics-toggle-view"
                     class="metrics--toggle"
         >
           <ion-icon [name]="isCollapsed ? 'expand' : 'contract'"
@@ -57,6 +58,7 @@
                 [title]="'common.update'|translate"
                 [aria-label]="'common.update'|translate"
                 (click)="update()"
+                id="metrics-update"
     >
       <ion-icon name="refresh" size="small" slot="icon-only"></ion-icon>
     </ion-button>
