AB#1464 privacy-officer updates

--- a/interfaces/HO-Portal/src/app/program/phase-next/phase-next.component.html
+++ b/interfaces/HO-Portal/src/app/program/phase-next/phase-next.component.html
@@ -1,5 +1,5 @@
 <confirm-prompt *ngIf="btnAvailable"
-                [disabled]="selectedPhase !== activePhase || !phaseReady || isInProgress"
+                [disabled]="selectedPhase !== activePhase || !phaseReady || isInProgress || currentUserRole !== userRoleEnum.ProgramManager"
                 (confirm)="advancePhase(activePhaseId)"
                 [subHeader]="btnText"
                 class="ion-float-end"
