--- a/interfaces/HO-Portal/src/app/program/program-people/program-people.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-people/program-people.component.html
@@ -7,7 +7,7 @@
   <p *ngIf="!enrolledPeople?.length && !showSensitiveData && selectedPhase !== 'design'">
     {{ 'page.program.program-people.noConnections'|translate }}
   </p>
-  <p *ngIf="!EnrolledPeople?.length && showSensitiveData && selectedPhase !== 'design'">
+  <p *ngIf="!enrolledPeople?.length && showSensitiveData && selectedPhase !== 'design'">
     {{ 'page.program.program-people.noConnectionsPrivacy'|translate }}
   </p>
 
