--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -36,16 +36,12 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="auto"
-               style="border-right: 1px dashed var(--ion-color-medium)"
-      >
-
+      <ion-col size="auto">
 
         <app-metrics [program]="program"></app-metrics>
 
-
       </ion-col>
-      <ion-col size="auto">
+      <ion-col>
 
         <app-program-payout [selectedPhase]="selectedPhase"
                             [programId]="program?.id"
