--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -46,7 +46,7 @@
 
 
       </ion-col>
-      <ion-col>
+      <ion-col size="auto">
 
         <app-program-people [selectedPhase]="selectedPhase"
                       [programId]="program?.id"
