Made pa metric accumalative AB#1551 AB#1552

--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -36,12 +36,12 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="auto">
+      <ion-col size=3>
 
         <app-metrics [program]="program"></app-metrics>
 
       </ion-col>
-      <ion-col>
+      <ion-col size=9>
 
         <app-program-payout [selectedPhase]="selectedPhase"
                             [programId]="program?.id"
