Fix: validation-error has influence on show-next-question
- "show-next-logic" should only include *question* speech-bubbles, not *validation-feedback* speech-bubbles

--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -70,7 +70,7 @@
   <div *ngIf="checkValidationErrors(question.code)"
        class="ion-margin-bottom ion-padding-bottom"
   >
-    <dialogue-turn isSpoken="true">
+    <dialogue-turn [isSpoken]="checkValidationErrors(question.code)">
       <p *ngIf="(question.answerType === answerType.phoneNumber) && validationErrors.includes('phoneNumber')">
         {{ 'validation.phoneNumber'|translate }}
       </p>
