--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -37,7 +37,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="auto"
+      <ion-col size="3"
                style="border-right: 1px dashed var(--ion-color-medium)"
       >
 
@@ -46,7 +46,7 @@
 
 
       </ion-col>
-      <ion-col size="auto">
+      <ion-col size="9">
 
         <app-program-people [selectedPhase]="selectedPhase"
                       [programId]="program?.id"
