--- a/interfaces/HO-Portal/src/app/program/program-people/program-people.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-people/program-people.component.html
@@ -1,6 +1,6 @@
 <section *ngIf="componentVisible">
   <h2>{{ 'page.program.program-details.section-people'|translate }}</h2>
-  
+
   <p>
     {{ 'page.program.program-people.targetNumber'|translate }} {{program?.highestScoresX}}
   </p>
@@ -11,28 +11,26 @@
     {{ 'page.program.program-people.noConnectionsPrivacy'|translate }}
   </p>
 
-  <div class="full-width">
-    <ngx-datatable #people
-                  class="bootstrap"
-                  limit="50"
-                  columnMode="force"
-                  rowHeight="auto"
-                  headerHeight="50"
-                  footerHeight="50"
-                  reorderable="false"
-                  sortType="multi"
-                  selectionType="checkbox"
-                  [displayCheck]="showCheckbox"
-                  loadingIndicator="true"
-                  [columns]="columns"
-                  [columnMode]="'standard'"
-                  [scrollbarH]="true"
-                  [rows]="enrolledPeople"
-                  [selected]="selectedPeople"
-                  [messages]="tableMessages"
-                  (select)="updateSubmitWarning()"
-    ></ngx-datatable>
-  </div>
+  <ngx-datatable #people
+                 *ngIf="enrolledPeople?.length"
+                 class="bootstrap"
+                 limit="50"
+                 columnMode="fixed"
+                 rowHeight="auto"
+                 scrollbarH="true"
+                 headerHeight="50"
+                 footerHeight="50"
+                 reorderable="false"
+                 sortType="multi"
+                 selectionType="checkbox"
+                 [displayCheck]="showCheckbox"
+                 loadingIndicator="true"
+                 [columns]="columns"
+                 [rows]="enrolledPeople"
+                 [selected]="selectedPeople"
+                 [messages]="tableMessages"
+                 (select)="updateSubmitWarning()"
+  ></ngx-datatable>
 
   <confirm-prompt [disabled]="!enrolledPeople.length"
                   (confirm)="submitInclusion()"
