--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -26,31 +26,26 @@
 
 <ion-content>
   <ion-grid>
-    <ion-row>
-      <ion-col class="ion-text-right">
-        <app-phase-next [programPhases]="programPhases"
-                  [selectedPhase]="selectedPhase"
-                  [programId]="program?.id"
-                  [phaseReady]="phaseReady"
-                  (emitNewPhase)="emitNewPhase($event)"
-        ></app-phase-next>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size=3>
+    <ion-row class="ion-nowrap ion-align-items-stretch">
+      <ion-col size="auto">
 
         <app-metrics [program]="program"></app-metrics>
 
       </ion-col>
-
-      <ion-col size=9>
+      <ion-col>
+        <app-phase-next [programPhases]="programPhases"
+                        [selectedPhase]="selectedPhase"
+                        [programId]="program?.id"
+                        [phaseReady]="phaseReady"
+                        (emitNewPhase)="emitNewPhase($event)"
+        ></app-phase-next>
 
         <app-program-people [selectedPhase]="selectedPhase"
-                      [programId]="program?.id"
-                      [userRole]="currentUserRole"
-                      (emitCompleted)="emitPeopleCompleted($event)"
+                            [programId]="program?.id"
+                            [userRole]="currentUserRole"
+                            (emitCompleted)="emitPeopleCompleted($event)"
         ></app-program-people>
-        
+
         <app-program-payout [selectedPhase]="selectedPhase"
                             [programId]="program?.id"
                             [currencyCode]="program?.currency"
@@ -58,7 +53,7 @@
         ></app-program-payout>
 
         <app-program-details [selectedPhase]="selectedPhase"
-                            [programId]="program?.id"
+                             [programId]="program?.id"
         ></app-program-details>
 
 
