--- a/interfaces/HO-Portal/src/app/program/metrics/metrics.component.html
+++ b/interfaces/HO-Portal/src/app/program/metrics/metrics.component.html
@@ -3,23 +3,7 @@
 
   <table class="metrics--table">
     <thead>
-      <th class="metrics--header-toggle">
-        <ion-button size="small"
-                    fill="clear"
-                    color="medium"
-                    [title]="isCollapsed ? translate.instant('page.program.metrics.header.expand') : translate.instant('page.program.metrics.header.collapse')"
-                    [aria-label]="isCollapsed ? translate.instant('page.program.metrics.header.expand') : translate.instant('page.program.metrics.header.collapse')"
-                    (click)="toggleView()"
-                    id="metrics-toggle-view"
-                    class="metrics--toggle"
-        >
-          <ion-icon [name]="isCollapsed ? 'expand' : 'contract'"
-                    color="medium"
-                    size="small"
-                    slot="icon-only"
-          ></ion-icon>
-        </ion-button>
-      </th>
+      <th class="metrics--cell-icon">&nbsp;</th>
       <th class="metrics--cell-label ion-text-start">
         {{ 'page.program.metrics.header.metric'|translate }}
       </th>
