AB#1563 process feedback

--- a/interfaces/HO-Portal/src/app/program/phase-next/phase-next.component.html
+++ b/interfaces/HO-Portal/src/app/program/phase-next/phase-next.component.html
@@ -6,7 +6,7 @@
   ></ion-spinner>
 
   <confirm-prompt *ngIf="btnAvailable"
-                  [disabled]="selectedPhase !== activePhase || !phaseReady || isInProgress || currentUserRole !== userRoleEnum.ProgramManager"
+                  [disabled]="checkDisabled()"
                   (confirm)="advancePhase(activePhaseId)"
                   [subHeader]="btnText"
                   class="ion-margin-start"
