--- a/interfaces/PA-App/src/app/shared/password-toggle-input/password-toggle-input.component.html
+++ b/interfaces/PA-App/src/app/shared/password-toggle-input/password-toggle-input.component.html
@@ -5,12 +5,17 @@
   <div style="display: flex; width: 100%;"
        class="ion-align-items-center"
   >
-    <ion-input [type]="inputType"
+    <ion-input #passwordInput
+               [type]="inputType"
                [name]="name"
                [(ngModel)]="ngModel"
                ngDefaultControl
                [disabled]="disabled"
                [autocomplete]="autocomplete"
+               minlength="4"
+               required
+               (ionChange)="onChange()"
+               debounce="1000"
     ></ion-input>
     <ion-button type="button"
                 fill="clear"
