Fix syntax of translatable text

--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -75,7 +75,7 @@
                                  [(isValid)]="createIsValid"
           ></password-toggle-input>
           <div class="ion-margin-top">
-            <p *ngIf="!createIsValid">'personal.create-identity.password-too-short'|translate</p>
+            <p *ngIf="!createIsValid">{{ 'personal.create-identity.password-too-short'|translate }}</p>
             <ion-button *ngIf="create && !initialInput"
                         (click)="initialInput=true;"
                         type="button"
