--- a/interfaces/AW-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/AW-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
@@ -2,35 +2,32 @@
      [ngClass]="{
        'is-connected': isConnected,
        'is-other ion-justify-content-start': !isSelf,
-       'is-self ion-justify-content-end': isSelf
+       'is-self ion-justify-content-end': isSelf,
+       'is-pending': animate && !isSpoken,
+       'is-spoken': animate && isSpoken
      }"
 >
   <div class="dialogue-turn--actor">
-    <ion-avatar *ngIf="actor === 'system'">
-      <img src={{imgPath121}}>
+    <ion-avatar *ngIf="isSystem" style="border-radius: 0 !important;">
+      <img src="./assets/avatar--121.svg">
     </ion-avatar>
-    <ion-avatar *ngIf="actor === 'self'">
-      <img src={{imgPathSelf}}>
+    <ion-avatar *ngIf="isSelf" style="background:#2f4bfd; display:flex;">
+      <ion-icon name="person" color="light" size="large" style="margin:auto; color:white;"></ion-icon>
     </ion-avatar>
-    <ion-avatar *ngIf="actor === 'ho'" style="color:black; background:white; display:flex;">
-      <b style="margin:auto">HO</b>
-    </ion-avatar>
-    <ion-avatar *ngIf="actor !== 'system' && actor !== 'self' && actor !== 'ho'" style="color:black; background:white; display:flex;">
-      <b style="margin:auto">{{actor}}</b>
+    <ion-avatar *ngIf="!isSystem && !isSelf" style="color:black; background:white; display:flex;">
+      <b style="margin:auto">{{ actor }}</b>
     </ion-avatar>
   </div>
-  <div class="dialogue-turn--content"
-       [ngClass]="isSelf ? 'ion-padding-end' : 'ion-padding-start'"
-  >
+  <div class="dialogue-turn--content">
     <ion-card [color]="isSelf ? 'light' : 'dark'">
       <ion-card-content>
 
         <ng-content></ng-content>
 
-        <ion-note class="ion-float-end ion-text-end ion-margin-top"
+        <ion-note class="ion-float-end ion-text-end"
                   [color]="isSelf ? '' : 'light'"
         >
-          <small>{{ moment|date:"EEEE, d LLL" }} - <strong>{{ moment|date:"hh:mm" }}</strong></small>
+          <small>{{ moment|date:"EEEE, d LLL" }} - <strong>{{ moment|date:"HH:mm" }}</strong></small>
         </ion-note>
       </ion-card-content>
     </ion-card>
