--- a/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
@@ -12,7 +12,7 @@
       <img src="./assets/avatar--121.svg">
     </ion-avatar>
     <ion-avatar *ngIf="isSelf" style="background:#2f4bfd; display:flex;">
-      <ion-icon name="person" color="white" size="large" style="margin:auto;"></ion-icon>
+      <ion-icon name="person" color="light" size="large" style="margin:auto;"></ion-icon>
     </ion-avatar>
     <ion-avatar *ngIf="!isSystem && !isSelf" style="color:black; background:white; display:flex;">
       <b style="margin:auto">{{ actor }}</b>
