--- a/interfaces/PA-App/src/app/shared/password-toggle-input/password-toggle-input.component.html
+++ b/interfaces/PA-App/src/app/shared/password-toggle-input/password-toggle-input.component.html
@@ -12,7 +12,7 @@
                ngDefaultControl
                [disabled]="disabled"
                [autocomplete]="autocomplete"
-               minlength="4"
+               [minlength]="minLength"
                required
                (ionChange)="onChange()"
                debounce="1000"
