--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -43,12 +43,14 @@
         <app-program-people [selectedPhase]="selectedPhase"
                             [programId]="program?.id"
                             [userRole]="currentUserRole"
+                            [refresh]="refresh"
                             (isCompleted)="onPeopleCompleted($event)"
         ></app-program-people>
 
         <app-program-payout [selectedPhase]="selectedPhase"
                             [programId]="program?.id"
                             [currencyCode]="program?.currency"
+                            (triggerRefresh)="refreshComponents($event)"
                             (isCompleted)="onPayoutCompleted($event)"
         ></app-program-payout>
 
