--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -83,6 +83,8 @@
                             (isCompleted)="onPayoutCompleted($event)"
         ></app-program-payout>
 
+        <app-manage-aidworkers></app-manage-aidworkers>
+
         <app-program-details [selectedPhase]="selectedPhase"
                              [programId]="program?.id"
         ></app-program-details>
