AB#1629 add phase-dependency setup

--- a/interfaces/HO-Portal/src/app/program/manage-aidworkers/manage-aidworkers.component.html
+++ b/interfaces/HO-Portal/src/app/program/manage-aidworkers/manage-aidworkers.component.html
@@ -1,3 +1,4 @@
-<p>
-  manage-aidworkers works!
-</p>
+<section *ngIf="componentVisible">
+  <h2>{{ 'page.program.manage-aidworkers.section-title'|translate }}</h2>
+
+</section>
