--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -83,7 +83,8 @@
                             (isCompleted)="onPayoutCompleted($event)"
         ></app-program-payout>
 
-        <app-manage-aidworkers></app-manage-aidworkers>
+        <app-manage-aidworkers [selectedPhase]="selectedPhase"
+        ></app-manage-aidworkers>
 
         <app-program-details [selectedPhase]="selectedPhase"
                              [programId]="program?.id"
