AB#1625 create list of assigned aidworkers

--- a/interfaces/HO-Portal/src/app/program/manage-aidworkers/manage-aidworkers.component.html
+++ b/interfaces/HO-Portal/src/app/program/manage-aidworkers/manage-aidworkers.component.html
@@ -1,4 +1,20 @@
 <section *ngIf="componentVisible">
   <h2>{{ 'page.program.manage-aidworkers.section-title'|translate }}</h2>
 
+  <ngx-datatable class="bootstrap"
+                 limit="50"
+                 columnMode="force"
+                 rowHeight="auto"
+                 scrollbarH="true"
+                 headerHeight="50"
+                 footerHeight="0"
+                 reorderable="false"
+                 sortType="multi"
+                 selectionType="checkbox"
+                 loadingIndicator="true"
+                 [columns]="columns"
+                 [rows]="aidworkers"
+                 [messages]="tableMessages"
+  ></ngx-datatable>
+
 </section>
