--- a/interfaces/HO-Portal/src/app/program/program-details/program-details.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-details/program-details.component.html
@@ -1,5 +1,5 @@
 <section *ngIf="componentVisible">
-  <h2>{{ 'page.program.program-details.section-details'|translate }}</h2>
+  <h2>{{ 'page.program.program-details.section-title'|translate }}</h2>
 
   <ion-list lines="full">
     <ion-item>
