--- a/interfaces/HO-Portal/src/app/program/program-payout/program-payout.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-payout/program-payout.component.html
@@ -1,5 +1,5 @@
 <section *ngIf="componentVisible">
-  <h2>{{ 'page.program.program-details.section-payout'|translate }}</h2>
+  <h2>{{ 'page.program.program-payout.section-title'|translate }}</h2>
   
   <form>
     <ion-item *ngFor="let installment of installments">
