--- a/interfaces/HO-Portal/src/app/program/program-people/program-people.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-people/program-people.component.html
@@ -1,5 +1,5 @@
 <section *ngIf="componentVisible">
-  <h2>{{ 'page.program.program-details.section-people'|translate }}</h2>
+  <h2>{{ 'page.program.program-people.section-title'|translate }}</h2>
 
   <p *ngIf="program?.highestScoresX">
     {{ 'page.program.program-people.targetNumber'|translate }} {{program?.highestScoresX}}
