--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -84,7 +84,7 @@
         ></app-program-payout>
 
         <app-manage-aidworkers [selectedPhase]="selectedPhase"
-                                [aidworkers]="program?.aidworkers"
+                                [userRole]="currentUserRole"
         ></app-manage-aidworkers>
 
         <app-program-details [selectedPhase]="selectedPhase"
