--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -84,6 +84,7 @@
         ></app-program-payout>
 
         <app-manage-aidworkers [selectedPhase]="selectedPhase"
+                                [programId]="program?.id"
                                 [userRole]="currentUserRole"
         ></app-manage-aidworkers>
 
