--- a/interfaces/HO-Portal/src/app/program/manage-aidworkers/manage-aidworkers.component.html
+++ b/interfaces/HO-Portal/src/app/program/manage-aidworkers/manage-aidworkers.component.html
@@ -13,12 +13,20 @@
                  [columns]="columns"
                  [rows]="aidworkers"
   >
-    <ngx-datatable-column *ngFor="let column of columns; let i = index;" name="{{column.name}}" prop="{{column.prop}}">
-      <ng-template let-value="value" let-row="row" *ngIf="column.prop==='delete'" ngx-datatable-cell-template>
+    <ngx-datatable-column *ngFor="let column of columns; let i = index;" 
+                          name="{{column.name}}" 
+                          prop="{{column.prop}}"
+    >
+      <ng-template *ngIf="column.prop==='delete'"
+                  let-row="row" 
+                  ngx-datatable-cell-template
+      >
         <confirm-prompt (confirm)="deleteAidworker(row)"
                         [subHeader]="'page.program.manage-aidworkers.column-delete'|translate"
+                        size="small"
+                        fill="outline"
         >
-          <ion-icon name="trash"></ion-icon>
+          <ion-icon size="small" slot="icon-only" name="trash"></ion-icon>
         </confirm-prompt>
       </ng-template>
     </ngx-datatable-column>
