Use SpeakText-keys in MoreInfo-button

--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -3,7 +3,9 @@
     <p [innerHTML]="'personal.select-language.introduction'|translate"></p>
     <p>
       <more-info-button [message]="'personal.select-language.info-message'|translate"
+                        messageKey="personal.select-language.info-message"
                         [heading]="'personal.select-language.more-info'|translate"
+                        headingKey="personal.select-language.more-info"
       >
         {{ 'personal.select-language.more-info'|translate }}
       </more-info-button>
