--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -1,5 +1,6 @@
 <section #selectLanguage>
   <dialogue-turn>
+    <play-text-audio key="personal.select-language.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
     <p [innerHTML]="'personal.select-language.introduction'|translate"></p>
     <p>
       <more-info-button [message]="'personal.select-language.info-message'|translate"
@@ -53,6 +54,7 @@
   <dialogue-turn *ngIf="isDisabled"
                  [isSpoken]="isDisabled"
   >
+    <play-text-audio key="personal.select-language.result" class="ion-float-end ion-margin-start"></play-text-audio>
     <p [innerHTML]="'personal.select-language.result'|translate:{ language:languageChoiceName }"></p>
   </dialogue-turn>
 </section>
