--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -61,6 +61,7 @@
                [sizeSm]="metricsCollapsed ? '11' : '12'"
                [sizeMd]="metricsCollapsed ? '11' : '8'"
                [sizeXl]="metricsCollapsed ? '' : '9'"
+               class="ion-padding-bottom"
       >
         <app-phase-next [programPhases]="programPhases"
                         [selectedPhase]="selectedPhase"
