--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -1,11 +1,13 @@
 <section #createIdentity>
     <dialogue-turn>
+      <play-text-audio key="personal.create-identity.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
       <p>
         {{ 'personal.create-identity.introduction'|translate }}
       </p>
       <p>
         <more-info-button [message]="'personal.create-identity.info-message'|translate"
                           [heading]="'personal.create-identity.more-info-digital-id'|translate"
+                          headingKey="personal.create-identity.more-info-digital-id"
         >
           {{ 'personal.create-identity.more-info-digital-id'|translate }}
         </more-info-button>
@@ -15,12 +17,14 @@
                    *ngIf="useLocalStorage"
                    [isSpoken]="useLocalStorage"
     >
+      <play-text-audio key="personal.create-identity.password-only" class="ion-float-end ion-margin-start"></play-text-audio>
       <p>
         {{ 'personal.create-identity.password-only'|translate }}
       </p>
       <p>
         <more-info-button [message]="'personal.create-identity.info-message-password'|translate"
                           [heading]="'personal.create-identity.more-info-password'|translate"
+                          headingKey="personal.create-identity.more-info-password"
         >
           {{ 'personal.create-identity.more-info-password'|translate }}
         </more-info-button>
@@ -30,12 +34,14 @@
                    *ngIf="!useLocalStorage"
                    [isSpoken]="!useLocalStorage"
     >
+      <play-text-audio key="personal.create-identity.username-password" class="ion-float-end ion-margin-start"></play-text-audio>
       <p>
         {{ 'personal.create-identity.username-password'|translate }}
       </p>
       <p>
         <more-info-button [message]="'personal.create-identity.info-message-username-pw'|translate"
                           [heading]="'personal.create-identity.more-info-username-pw'|translate"
+                          headingKey="personal.create-identity.more-info-username-pw"
         >
           {{ 'personal.create-identity.more-info-username-pw'|translate }}
         </more-info-button>
@@ -47,6 +53,7 @@
 
         <div *ngIf="!useLocalStorage">
           <div>
+            <play-text-audio key="personal.create-identity.create-username" class="ion-margin-end"></play-text-audio>
             <ion-label>{{ 'personal.create-identity.create-username'|translate }}</ion-label>
             <ion-input type="text"
                         name="username"
@@ -66,6 +73,7 @@
         <div *ngIf="usernameSubmitted || useLocalStorage"
              class="ion-margin-vertical"
         >
+          <play-text-audio key="personal.create-identity.create-password-explanation" class="ion-margin-end"></play-text-audio>
           <p>{{ 'personal.create-identity.create-password-explanation'|translate:{ minimalLength: passwordMinLength } }}</p>
           <password-toggle-input name="create"
                                  [(ngModel)]="create"
@@ -79,7 +87,10 @@
                                  [(isValid)]="createIsValid"
           ></password-toggle-input>
           <div class="ion-margin-top">
-            <p *ngIf="createIsValid === false">{{ 'personal.create-identity.password-too-short'|translate:{ minimalLength: passwordMinLength } }}</p>
+            <div *ngIf="createIsValid === false">
+              <play-text-audio key="personal.create-identity.password-too-short" class="ion-margin-end"></play-text-audio>
+              <p>{{ 'personal.create-identity.password-too-short'|translate:{ minimalLength: passwordMinLength } }}</p>
+            </div>
             <ion-button *ngIf="create && !initialInput"
                         [disabled]="!createIsValid || initialInput || isDisabled"
                         type="submit"
@@ -89,7 +100,7 @@
         </div>
 
         <div *ngIf="initialInput">
-          <p>{{ 'personal.create-identity.confirm-password'|translate }}</p>
+          <play-text-audio key="personal.create-identity.confirm-password" class="ion-margin-end"></play-text-audio>
           <password-toggle-input name="confirm"
                                  [(ngModel)]="confirm"
                                  ngDefaultControl
@@ -113,6 +124,7 @@
     <dialogue-turn *ngIf="unequalPasswords"
                    [isSpoken]="unequalPasswords"
     >
+      <play-text-audio key="personal.create-identity.unequal-passwords" class="ion-float-end ion-margin-start"></play-text-audio>
       <p>
         {{ 'personal.create-identity.unequal-passwords'|translate }}
       </p>
@@ -120,6 +132,7 @@
     <dialogue-turn *ngIf="usernameNotUnique"
                    [isSpoken]="usernameNotUnique"
     >
+      <play-text-audio key="personal.create-identity.username-not-unique" class="ion-float-end ion-margin-start"></play-text-audio>
       <p>
         {{ 'personal.create-identity.username-not-unique'|translate }}
       </p>
@@ -127,6 +140,7 @@
     <dialogue-turn *ngIf="isDisabled"
                    [isSpoken]="isDisabled"
     >
+      <play-text-audio key="personal.create-identity.conclusion" class="ion-float-end ion-margin-start"></play-text-audio>
       <p>
         {{ 'personal.create-identity.conclusion'|translate }}
       </p>
